--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@trailervote/express-logger",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Logger for express apps that can be passed around via locals, arguments or live bindings and allows for noop calling.",
-  "main": "dist/logger.js",
+  "module": "dist/logger.js",
   "repository": "https://github.com/TrailerVote/trailervote-express-logger",
   "author": "Derk-Jan Karrenbeld <dj@trailervote.com>",
   "license": "MIT",
@@ -14,11 +14,12 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "lint": "tslint --project tsconfig.json",
-    "test": "ts-node node_modules/tape/bin/tape tests/**/*.ts"
+    "test": "node -r esm -r ts-node/register node_modules/tape/bin/tape tests/**/*.ts"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/tape": "^4.2.33",
+    "esm": "^3.1.0",
     "husky": "^1.2.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
