--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "test": "node -r esm -r ts-node/register node_modules/tape/bin/tape tests/**/*.ts"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
     "@types/tape": "^4.2.33",
     "esm": "^3.1.0",
     "husky": "^1.2.1",
@@ -31,7 +30,9 @@
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/express": "^4.16.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
