--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trailervote/express-logger",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Logger for express apps that can be passed around via locals, arguments or live bindings and allows for noop calling.",
   "main": "dist/logger.js",
   "module": "dist/logger.js",
@@ -15,7 +15,8 @@
     "prebuild": "rimraf dist",
     "build": "tsc",
     "lint": "tslint --project tsconfig.json",
-    "test": "node -r esm -r ts-node/register node_modules/tape/bin/tape tests/**/*.ts"
+    "test": "node -r esm -r ts-node/register node_modules/tape/bin/tape tests/**/*.ts",
+    "prepublish": "yarn test && yarn lint && yarn build"
   },
   "devDependencies": {
     "@types/tape": "^4.2.33",
